fix(components): Manage Checkbox Visibility Inline for Improved Testing (#2605)
manage visibility inline, so RTL can work with it

--- a/packages/components/src/DataList/DataList.module.css
+++ b/packages/components/src/DataList/DataList.module.css
@@ -154,14 +154,9 @@
 
 .selectAllCheckbox {
   display: flex;
-  visibility: hidden;
 
   /* To compensate the Checkbox's label margin that we are using for screen-readers */
   margin-right: calc(var(--space-base) * -1);
-}
-
-.selectAllCheckbox.visible {
-  visibility: visible;
 }
 
 .listItem .selectable > :first-child {
